# motion-mirror

./: .gitignore  CODE_REVIEW_v0.2a.md  CODE_REVIEW_v0.2a_DETAILED.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements-cuda.txt
.github/workflows/: ci.yml
presets/: fast.toml  hq.toml  low-vram.toml  mock.toml
src/motion_mirror/: __init__.py  cli.py  config.py  exceptions.py  hardware.py  pipeline.py  types.py
src/motion_mirror/extract/: __init__.py  pose.py  render_skeleton.py  segment.py  trajectory.py
src/motion_mirror/generate/: __init__.py  controlnet.py  models.py  wan_move.py
src/motion_mirror/postprocess/: __init__.py  audio.py
src/motion_mirror/presets/: default.toml  fast.toml
src/motion_mirror/ui/: app.py
tests/: test_audio.py  test_cli.py  test_config.py  test_config_v02a.py  test_exceptions.py  test_generate.py  test_generate_gpu.py  test_hardware.py  test_pipeline_integration.py  test_pose.py  test_pose_gpu.py  test_render_skeleton.py  test_segment.py  test_segment_sam2.py  test_smoke.py  test_trajectory.py  test_trajectory_raft.py  test_types.py  test_ui.py
