[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motion-mirror"
version = "0.1.0"
description = "Local-first motion transfer pipeline for animating a character image from a reference video."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradio>=5,<6",
  "typer>=0.12,<1",
  "opencv-python>=4.9",
  "numpy>=1.26",
  "rembg>=2.0",
  "static-ffmpeg>=2.5",
  "ffmpeg-python>=0.2",
  "huggingface-hub>=0.23",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
cuda = [
  "torch>=2.2",
  "torchvision>=0.17",
  "onnxruntime-gpu>=1.18",
  "rtmlib>=0.0.13",
]
cpu = [
  "torch>=2.2",
  "torchvision>=0.17",
  "onnxruntime>=1.18",
  "rtmlib>=0.0.13",
]

[project.scripts]
motion-mirror = "motion_mirror.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: marks tests requiring a CUDA GPU (deselect with -m 'not gpu')",
  "slow: marks tests that take more than 30 seconds",
]
